--- a/.github/workflows/core-services-ci.yaml
+++ b/.github/workflows/core-services-ci.yaml
@@ -8,13 +8,36 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-and-linting:
+  changes:
+    name: Create strategy matrix
+    runs-on: ubuntu-latest
+    outputs:
+      services: ${{ steps.filter.outputs.changes }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            applicant-service:
+              - "core-services/applicant-service/**"
+            clinic-service:
+              - "core-services/clinic-service/**"
+            lambda-authoriser:
+              - "core-services/lambda-authoriser/**"
+
+  test-and-vulnerability-scans:
     name: Run unit tests, audit, and SonarCloud Scan
     runs-on: ubuntu-latest
+    needs: changes
 
     strategy:
       matrix:
-        service: [applicant-service, clinic-service, lambda-authoriser]
+        service: ${{ fromJSON(needs.changes.outputs.services) }}
 
     steps:
       - name: Checkout code
@@ -27,17 +50,6 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
-      - name: Paths filter
-        uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            applicant-service:
-              - "core-services/applicant-service/**"
-            clinic-service:
-              - "core-services/clinic-service/**"
-            lambda-authoriser:
-              - "core-services/lambda-authoriser/**"
       - name: Install dependencies
         run: yarn
       - name: Audit packages
