--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -1,16 +1,39 @@
 {
   "name": "applicant-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "applicants.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "deploy": "serverless deploy"
+    "start": "serverless offline start --verbose",
+    "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
+    "test": "jest",
+    "test-m": "BRANCH=local jest",
+    "tools-setup": "sls dynamodb install",
+    "build": "tspc -b tsconfig.json && yarn run build:copy",
+    "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find test -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build",
+    "zip": "zip -r test-service.zip .build"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.675.0",
+    "@aws-sdk/lib-dynamodb": "^3.675.0",
+    "aws-lambda": "^1.0.7",
+    "aws-xray-sdk": "^3.10.1",
+    "node-yaml": "^4.0.1",
+    "path-parser": "^6.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^29.7.0",
+    "serverless-auto-swagger": "^3.0.0",
+    "serverless-dynamodb": "^0.2.54",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^14.3.3",
+    "serverless-offline-aws-eventbridge": "^2.2.2",
+    "serverless-plugin-tracing": "^2.0.0",
     "ts-jest": "^29.2.4",
-    "typescript": "5.5.4"
+    "ts-patch": "^3.2.1",
+    "typescript": "5.5.4",
+    "typescript-transform-paths": "3.4.7"
   }
 }
