--- a/app/pets-ui/tsconfig.json
+++ b/app/pets-ui/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@/*": ["./*"],
       "@model/*": ["./model/*"],
-      "@components/*": ["./components/*"]
+      "@components/*": ["./components/*"],
+      "@utils/*": ["./utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
