Exclude utils from sonarcloud scan

--- a/app/pets-ui/sonar-project.properties
+++ b/app/pets-ui/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app-ui
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
 sonar.sources=app/, components/
-sonar.exclusions=components/**/*.test.tsx
+sonar.exclusions=components/**/*.test.tsx, utils/*
 sonar.tests=components/, cypress
 sonar.test.inclusions=components/**/*.test.tsx, cypress/e2e/**
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
