--- a/app/pets-ui/tsconfig.json
+++ b/app/pets-ui/tsconfig.json
@@ -21,9 +21,10 @@
     "paths": {
       "@/*": ["./*"],
       "@model/*": ["./model/*"],
-      "@components/*": ["./components/*"]
+      "@components/*": ["./components/*"],
+      "@utils/*": ["./utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "./cypress.config.ts"]
 }
