--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -36,18 +36,39 @@ jobs:
         with:
           projectBaseDir: app/pets-ui/
   
+  cypress-install:
+    runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        - name: Cypress install
+          uses: cypress-io/github-action@v6
+          with:
+            # Disable running of tests within install job
+            runTests: false
+            build: yarn run build
+            working-directory: app/pets-ui
+        - name: Save build folder
+          uses: actions/upload-artifact@v4
+          with:
+            name: build
+            if-no-files-found: error
+            path: build
+
   cypress-run:
     runs-on: ubuntu-latest
+    needs: cypress-install
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # Install yarn dependencies, cache them correctly
-      # and run all Cypress tests
+      - name: Download the build folder
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: yarn
-          start: yarn run dev
-          working-directory: app/pets-ui/cypress/e2e
+          start: yarn run start
+          working-directory: app/pets-ui
           browser: chrome
-
