--- a/app/pets-ui/tsconfig.json
+++ b/app/pets-ui/tsconfig.json
@@ -17,6 +17,7 @@
         "name": "next"
       }
     ],
+    "types": ["cypress", "node"],
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"],
