--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           projectBaseDir: app/pets-ui/
   
-  cypress-install:
+  cypress-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -49,31 +49,31 @@ jobs:
       - name: Cypress install
         uses: cypress-io/github-action@v6
         with:
-          # Disable running of tests within install job
-          runTests: false
           build: yarn run build
-          working-directory: app/pets-ui
-      - name: Save build folder
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-folder
-          if-no-files-found: error
-          path: app/pets-ui/.next/
-
-  cypress-run:
-    runs-on: ubuntu-latest
-    needs: cypress-install
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Download the build folder
-        uses: actions/download-artifact@v4
-        with:
-          name: build-folder
-          path: app/pets-ui/.next
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
           start: yarn run start
           working-directory: app/pets-ui
           browser: chrome
+      # - name: Save build folder
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: build-folder
+      #     if-no-files-found: error
+      #     path: app/pets-ui/.next/
+
+  # cypress-run:
+  #   runs-on: ubuntu-latest
+  #   needs: cypress-install
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Download the build folder
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: build-folder
+  #         path: app/pets-ui/.next
+  #     - name: Cypress run
+  #       uses: cypress-io/github-action@v6
+  #       with:
+  #         start: yarn run start
+  #         working-directory: app/pets-ui
+  #         browser: chrome
