--- a/pets-ui/tsconfig.json
+++ b/pets-ui/tsconfig.json
@@ -8,6 +8,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@assets/*": ["./src/assets/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@sections/*": ["./src/sections/*"],
     }
   }
 }
