--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "govuk-react": "^0.10.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
