--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
@@ -24,6 +25,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "2.1.5",
     "cypress": "^13.15.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
@@ -33,6 +35,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
-    "vite-tsconfig-paths": "^5.1.2"
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^2.1.5"
   }
 }
