--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -15,8 +15,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Install pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 9
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,16 +24,16 @@ jobs:
         run: pnpm i
       - name: Audit packages
         run: pnpm audit
-      # - name: Run unit tests
-      #   run: pnpm run test
-      #   working-directory: pets-ui
+      - name: Run unit tests
+        run: pnpm run test
+        working-directory: pets-ui
       - name: Run eslint
         run: pnpm run lint
         working-directory: pets-ui
         continue-on-error: true
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@master
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   with:
-      #     projectBaseDir: pets-ui/
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: pets-ui/
