--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -22,11 +22,13 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm i
-      # - name: Audit packages
-      #   run: pnpm audit
+      - name: Audit packages
+        run: pnpm audit
+        continue-on-error: true
       - name: Run unit tests
         run: pnpm run test
         working-directory: pets-ui
+        continue-on-error: true
       - name: Run eslint
         run: pnpm run lint
         working-directory: pets-ui
