--- a/pets-ui/sonar-project.properties
+++ b/pets-ui/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app-ui
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
-sonar.sources=app/, components/
-sonar.exclusions=components/**/*.test.tsx, utils/*
-sonar.tests=components/, cypress
-sonar.test.inclusions=components/**/*.test.tsx, cypress/e2e/**
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.sources=src/
+sonar.exclusions=utils/*
+sonar.tests=cypress
+sonar.test.inclusions=cypress/e2e/**
+sonar.javascript.lcov.reportPaths=./coverage/coverage-final.json
