Fix sonarcloud properties

--- a/pets-ui/sonar-project.properties
+++ b/pets-ui/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src/
 sonar.exclusions=src/utils/*
 sonar.tests=cypress
 sonar.test.inclusions=cypress/e2e/**
-sonar.javascript.lcov.reportPaths=./coverage/coverage-final.json
+sonar.javascript.lcov.reportPaths=coverage/coverage-final.json
