--- a/.github/workflows/core-services-ci.yaml
+++ b/.github/workflows/core-services-ci.yaml
@@ -53,7 +53,7 @@ jobs:
           node-version: 23.x
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm
+        run: pnpm i
       - name: Audit packages
         run: pnpm audit
       - name: Run unit tests
