--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -22,6 +22,8 @@
     "path-parser": "^6.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@smithy/smithy-client": "^3.4.2",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.12",
