--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -38,6 +38,9 @@ jobs:
   
   cypress-run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        browser: [chrome, firefox, edge]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,4 +55,4 @@ jobs:
           build: yarn run build
           start: yarn run start
           working-directory: app/pets-ui
-          browser: chrome
+          browser: {{ matrix.browser }}
