added missing dollar sign

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -55,4 +55,4 @@ jobs:
           build: yarn run build
           start: yarn run start
           working-directory: app/pets-ui
-          browser: {{ matrix.browser }}
+          browser: ${{ matrix.browser }}
