Fix cypress start command in app-ci

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -61,5 +61,5 @@ jobs:
           install: false
           working-directory: pets-ui
           build: pnpm run build
-          start: pnpm run start
+          start: pnpm run preview
           browser: ${{ matrix.browser }}
