Disable cypress step in app-ci

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -38,6 +38,7 @@ jobs:
 
   cypress-run:
     runs-on: ubuntu-latest
+    if: false
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
