--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -12,15 +12,14 @@
     "test": "vitest run --coverage"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.34",
-    "govuk-react": "^0.10.7",
+    "govuk-frontend": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.2",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
-    "styled-components": "^6.1.13"
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
