--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -122,18 +122,23 @@ jobs:
         working-directory: core-services/${{ matrix.service }}
         run: aws s3 cp swagger.json s3://$BUCKET_SECRET --sse aws:kms --sse-kms-key-id $SSE_KEY_SECRET
 
-      - name: Create package.json file including only non-dev dependencies
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const createPackageDotJson = require('./.github/scripts/create-package-dot-json.js')
-            createPackageDotJson('${{ matrix.service }}')
-      - name: Install dependencies in nodejs folder
-        working-directory: node-zip/${{ matrix.service }}/nodejs
-        run: pnpm i
+      # - name: Create package.json file including only non-dev dependencies
+      #   uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       const createPackageDotJson = require('./.github/scripts/create-package-dot-json.js')
+      #       createPackageDotJson('${{ matrix.service }}')
+      # - name: Install dependencies in nodejs folder
+      #   working-directory: node-zip/${{ matrix.service }}/nodejs
+      #   run: pnpm i
+      - run: ls
+      - run: cd core-services/${{ matrix.service }} && ls
+      - name: Copy node modules to node-zip folder for ${{ matrix.service }}
+        run: mkdir -p node-zip/${{ matrix.service }}/nodejs && cp core-services/${{ matrix.service }}/node_modules node-zip/${{ matrix.service }}/nodejs
       - name: Create nodejs zip file
         working-directory: node-zip/${{ matrix.service }}
         run: zip -r nodejs.zip nodejs
+      - run: cd node-zip/${{ matrix.service }} && ls
       - name: Upload nodejs zip file to S3
         working-directory: node-zip/${{ matrix.service }}
         run: aws s3 cp nodejs.zip s3://$BUCKET_SECRET --sse aws:kms --sse-kms-key-id $SSE_KEY_SECRET
