--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -134,7 +134,7 @@ jobs:
       - run: ls
       - run: cd core-services/${{ matrix.service }} && ls
       - name: Copy node modules to node-zip folder for ${{ matrix.service }}
-        run: mkdir -p node-zip/${{ matrix.service }}/nodejs && cp core-services/${{ matrix.service }}/node_modules node-zip/${{ matrix.service }}/nodejs
+        run: mkdir -p node-zip/${{ matrix.service }}/nodejs && cp -r core-services/${{ matrix.service }}/node_modules node-zip/${{ matrix.service }}/nodejs
       - name: Create nodejs zip file
         working-directory: node-zip/${{ matrix.service }}
         run: zip -r nodejs.zip nodejs
