--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -20,6 +20,7 @@
     "aws-xray-sdk": "^3.10.1",
     "node-yaml": "^4.0.1",
     "path-parser": "^6.1.0",
+    "search-params": "^4.0.1",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
