--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -19,9 +19,7 @@
     "aws-lambda": "^1.0.7",
     "aws-xray-sdk": "^3.10.1",
     "node-yaml": "^4.0.1",
-    "path-parser": "^6.1.0",
-    "search-params": "^4.0.1",
-    "tslib": "^2.8.1"
+    "path-parser": "^6.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
