--- a/pets-ui/sonar-project.properties
+++ b/pets-ui/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src/
 sonar.exclusions=src/components/**/*.test.tsx, src/utils/*
 sonar.tests=src/components/, cypress
 sonar.test.inclusions=src/components/**/*.test.tsx, cypress/e2e/**
-sonar.javascript.lcov.reportPaths=coverage/coverage-final.json
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
