maintain applicant details state

--- a/pets-ui/tsconfig.app.json
+++ b/pets-ui/tsconfig.app.json
@@ -28,6 +28,8 @@
       "@assets/*": ["./src/assets/*"],
       "@pages/*": ["./src/pages/*"],
       "@sections/*": ["./src/sections/*"],
+      "@components/*": ["./src/components/*"],
+      "@redux/*": ["./src/redux/*"],
     },
 
     /* Vitest config */
