--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -12,21 +12,27 @@
     "test": "vitest run --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "govuk-frontend": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.2",
+    "react-redux": "^9.1.2",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "sass": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@redux-devtools/core": "^4.0.0",
+    "@redux-devtools/dock-monitor": "^4.0.1",
+    "@redux-devtools/log-monitor": "^5.0.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "2.1.5",
     "cypress": "^13.15.2",
