--- a/app/pets-ui/package.json
+++ b/app/pets-ui/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "govuk-frontend": "^5.4.1",
-    "next": "14.2.10",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
